[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "noisemap"
version = "2025.12.19"
license = { text = "MIT" }
description = "Noise estimation for 3D magnitude MR images in Python"
authors = [
    { name = "Mike Tyszka", email = "jmt@caltech.edu" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/jmtyszka/noisemap"
Repository = "https://github.com/jmtyszka/noisemap"

[tool.setuptools.packages.find]
exclude = ["notebooks*"]

[project.scripts]
noisemap = "noisemap.__main__:main"